syntax = "proto3";

package com.sitewhere.grpc.service;

option java_multiple_files = true;
option java_package = "com.sitewhere.grpc.service";
option java_outer_classname = "UserServices";

import "user-model.proto";

// User management APIs.
service UserManagement {

	// Create a new user.
	rpc CreateUser (GCreateUserRequest) returns (GCreateUserResponse) {}

	// Import an existing user.
	rpc ImportUser (GImportUserRequest) returns (GImportUserResponse) {}

	// Authenticate credentials.
	rpc Authenticate (GAuthenticateRequest) returns (GAuthenticateResponse) {}

	// Update an existing user.
	rpc UpdateUser (GUpdateUserRequest) returns (GUpdateUserResponse) {}

	// Get user by username.
	rpc GetUserByUsername (GGetUserByUsernameRequest) returns (GGetUserByUsernameResponse) {}
}
	
// Request for creating a user.
message GCreateUserRequest {
	com.sitewhere.grpc.model.GUserCreateRequest request = 1;
	bool encodePassword = 2;
}

// Response from creating a user.
message GCreateUserResponse {
	com.sitewhere.grpc.model.GUser user = 1;
}
	
// Request for importing a user.
message GImportUserRequest {
	com.sitewhere.grpc.model.GUser user = 1;
	bool overwrite = 2;
}

// Response from creating a user.
message GImportUserResponse {
	com.sitewhere.grpc.model.GUser user = 1;
}

// Request for authentication.
message GAuthenticateRequest {
	string username = 1;
	string password = 2;
	bool updateLastLogin = 3;
}

// Response for authentication.
message GAuthenticateResponse {
	com.sitewhere.grpc.model.GUser user = 1;
}

// Request for updating a user.
message GUpdateUserRequest {
	string username = 1;
	com.sitewhere.grpc.model.GUserCreateRequest request = 2;
	bool encodePassword = 3;
}

// Response for updating a user.
message GUpdateUserResponse {
	com.sitewhere.grpc.model.GUser user = 1;
}

// Request for getting user by username.
message GGetUserByUsernameRequest {
	string username = 1;
}

// Response for getting user by username.
message GGetUserByUsernameResponse {
	com.sitewhere.grpc.model.GUser user = 1;
}